--- a/src/components/section-title/sectionTitle.css
+++ b/src/components/section-title/sectionTitle.css
@@ -1,6 +1,10 @@
 .section-title {
-  border-bottom: 0.7rem solid blue;
+  border-bottom: 0.7rem solid black;
   width: 20%;
   margin-left: auto;
   margin-right: auto;
+}
+
+.section-title:hover {
+  border-bottom: 0.7rem solid blue;
 }
